 - Added ReaderRepresentation for representations based on characters Readers.
 - Added WriterRepresentation for representations based on characters Writers.
 - Added ByteUtils.toString(Reader) method and refactored ByteUtils.toString(InputStream)
   to reuse it.
 - Added ByteUtils.getReader(InputStream, CharacterSet) method.
 - Added getReader() and a write(Writer) methods on Representation class.
 - Exposed the "file" property on the FileRepresentation class.
 - Added two new FreeMarker's TemplateRepresentation constructor to allow more ways to
   provide the template (via a representation or directly as a FreeMarker Template object).
 - Added W3C XML Schema and Relax NG media types.
 - Added validate() methods on XmlRepresentation to validate an XML representation against
   a given schema.
 - Added a getSource() method on XmlRepresentation that results a JAXP Source instance.
 - Added JAXB extension based on a contribution by Overstock.com (via Sean Landis).
 - Added JAXB 2.0 and StAX 1.0 libraries.
 - Added a Template.getVariableNames() method. Suggested by Stian Soiland.
 - Added new Dimension.AUTHORIZATION enum entry. Suggested by Stian Soiland.
 - Optimized the Resource handling of conditional gets. If the conditions are not met, the
   getRepresentation(Variant) method is never invoked. Suggested by Stian Soiland.
 - The ServletConverter now also copy the Servlet's request attributes into the Restlet
   attributes map. Suggested by Leigh Klotz.
 - Added new media types for RSS and WADL. Contributed by Avi Flax.
 - Added Atom, Relax NG, RSS, RTF, WADL and XSD in the common extensions of MetadataService.
   Contributed by Avi Flax.
 - Simplified the management of MediaType constants. Contributed by Stian Soiland.

[Misc]
 - Removed AsyncWeb connector, to be replaced by a custom MINA based one.
 - Removed Jetty 5 connector from the code base. Jetty 6 connector is stable enough now.
 